Updated travis to deploy

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,3 +7,15 @@ before_install:
 
 script:
   - docker run -e CI=true aviboinidocker/docker-react-project npm run test
+
+deploy:
+  provider: elasticbeanstalk
+  region: "us-east-2"
+  app: "dockerReactProject"
+  env: "Dockerreactproject-env"
+  bucket_name: "elasticbeanstalk-us-east-2-206018806401"
+  bucket_path: "dockerReactProject"
+  on:
+    branch: master
+  access_key_id: $AWS_ACCESS_KEY
+  secret_access_key: $AWS_SECRET_KEY
